# aemr-bot

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  REPO_INDEX.md  aemr-bot-index.md
.agents/context/: DESIGN.md  PRODUCT.md
.github/: dependabot.yml
.github/workflows/: ci.yml  repo-index.yml
_local-backup/: PRODUCT_BRIEF_internal.md
bot/: alembic.ini  pyproject.toml
bot/aemr_bot/: config.py  health.py  keyboards.py  logging_setup.py  main.py  network.py  texts.py
bot/aemr_bot/copy/: __init__.py  admin_texts.py  broadcast_texts.py  citizen_funnel.py  errors_texts.py  security_texts.py
bot/aemr_bot/db/: models.py  session.py  single_instance.py
bot/aemr_bot/db/alembic/: env.py
bot/aemr_bot/db/alembic/versions/: 0001_initial.py  0002_broadcast.py  0003_phone_normalized.py  0004_indexes_and_autovacuum.py  0005_appeals_locality.py  0006_consent_revoked_at.py  0007_consent_broadcast_anonymous.py  0008_backfill_consent_broadcast.py  0009_partial_indexes_for_hot_paths.py  0010_pg_ops_hardening.py  0011_wizard_state_persistence.py  0012_messages_appeal_created_index.py  0013_settings_synced_at.py  0014_broadcasts_attachments.py  0015_broadcast_templates.py  0016_broadcast_template_usage.py  0017_appeals_last_card_mid.py  0018_users_trigram_search_indexes.py  0019_appeals_status_created_index.py  0020_appeals_coordinates.py  0021_drop_appeals_coordinates.py  0022_users_consent_text_hash.py
bot/aemr_bot/handlers/: __init__.py  _auth.py  _common.py  admin_appeal_ops.py  admin_audience.py  admin_callback_dispatch.py  admin_commands.py  admin_operators.py  admin_operators_list.py  admin_operators_roles.py  admin_operators_wizard.py  admin_panel.py  admin_resident_search.py  admin_settings.py  admin_settings_author.py  admin_settings_list.py  admin_settings_notify.py  admin_settings_obj.py  admin_settings_pr.py  admin_settings_quiet.py  admin_settings_shared.py  admin_settings_text.py  admin_stats.py  appeal.py  appeal_funnel.py  appeal_geo.py  appeal_runtime.py  broadcast.py  broadcast_templates.py  broadcast_templates_crud.py  broadcast_templates_list.py  broadcast_templates_state.py  broadcast_templates_wizard.py  broadcast_wizard.py  callback_payloads.py  callback_router.py  menu.py  operator_reply.py  policy_tmp.py  start.py
bot/aemr_bot/observability/: __init__.py  sentry.py
bot/aemr_bot/services/: admin_bus.py  admin_card.py  admin_events.py  admin_relay.py  appeal_flow_guard.py  appeals.py  backup_verify.py  broadcast_templates.py  broadcast_utils.py  broadcasts.py  calendar_ru.py  card_format.py  cards.py  cron.py  cron_registry.py  db_backup.py  flow_append_text.py  flow_extra.py  flow_followup_policy.py  flow_prompts.py  flow_repeat_policy.py  flow_runtime.py  flow_stale_guard.py  fsm_policy.py  fsm_policy_core.py  fsm_runtime_patch.py  geo.py  idempotency.py  interaction_policy.py  notify_toggles.py  operators.py  policy.py  policy_sql_tmp.py  probe_chr_ru.py  probe_closed.py  probe_final_func.py  probe_followup_name2.py  probe_import_message.py  probe_parts.py  probe_status_answered.py  (+13 more)
bot/aemr_bot/ui/: __init__.py  broadcast_keyboards.py  citizen_keyboards.py  operator_keyboards.py  settings_keyboards.py  wizard_keyboards.py
bot/aemr_bot/utils/: abc_patch.py  attachments.py  background.py  event.py  image_attachments.py  menu_tracker.py  picture_flows.py  pii_mask.py  t1.py  typing_indicator.py  url_defang.py
bot/tests/: _helpers.py  conftest.py  test_admin_appeal_ops.py  test_admin_appeal_ops_characterization.py  test_admin_audience_paginated.py  test_admin_bus.py  test_admin_callback_dispatch.py  test_admin_card_detached_safety.py  test_admin_card_render.py  test_admin_events.py  test_admin_events_descriptor.py  test_admin_handlers_small.py  test_admin_operators.py  test_admin_operators_characterization.py  test_admin_operators_coverage.py  test_admin_ops_cluster_coverage.py  test_admin_outgoing_hook.py  test_admin_panel.py  test_admin_resident_search.py  test_admin_settings_audit.py  test_admin_settings_characterization.py  test_admin_settings_cluster_coverage.py  test_admin_settings_handlers.py  test_appeal_card_edit_policy.py  test_appeal_card_timeline.py  test_appeal_dispatcher.py  test_appeal_flow.py  test_appeal_funnel_cluster_coverage.py  test_appeals_service_pg.py  test_attachments_cov2.py  test_attachments_helpers.py  test_backup_verify.py  test_bot_init_concurrency.py  test_broadcast_429_backoff.py  test_broadcast_handlers.py  test_broadcast_history_card.py  test_broadcast_keyboards_cov2.py  test_broadcast_operators_coverage.py  test_broadcast_templates_characterization.py  test_broadcast_templates_coverage.py  (+101 more)
docs/: ADR-001-architecture.md  BACKUP_RESTORE_TEST.md  BOT_COMMANDS.md  COMMANDS.md  COMPETITIVE_DEEP_DIVE.md  COMPLIANCE_WITH_REGLAMENT_v5.md  COMPLIANCE_WITH_REGLAMENT_v7.md  COPY.md  COPY_AUDIT.md  DEPS.md  DEVELOPER.md  DOC_AUDIT.md  HANDOFF.md  HOW_IT_WORKS.md  IDEAS.md  MAXAPI_UPGRADE_PROCEDURE.md  OPERATOR_SECURITY.md  OPS_GUIDE.md  PRD-mvp.md  PRD.md  PRIVACY.md  PRIVACY_DRAFT.md  README.md  ROADMAP.md  ROLLBACK.md  RULES.md  RUNBOOK.md  RUNBOOK_PDN_ERASURE.md  RUNBOOK_VPS.md  SECURITY.md  SETUP.md  SYSADMIN.md  VPS_SMOKE_CHECKLIST.md  architecture-diagrams.md  db-schema.md  handover.html  interaction-policy.md  it.html  Политика_v2.md  Политика_конфиденциальности_ИС_Чат-бот_MAX.docx  (+7 more)
docs/_extracted/: README.md
docs/_meta/: ADMIN_MENU_EXPANSION_PROPOSAL.md  AUDIT_REPORT.md  CARDS_UX_SWEEP_2026-05-26.md  COVERAGE_GAPS.md  (+20 more)
infra/: .env.example  Dockerfile  aemr-bot.service  docker-compose.cntlm.yml  docker-compose.webhook.yml  docker-compose.yml  egress-allowlist.sh  init-letsencrypt.sh
scripts/: audit_vps.sh  auto-deploy.sh  build_geo_database.py  build_policy.mjs  cross_verify_geo.py  extract_reglament.py  generate_privacy_pdf.py  healthwatch.sh  install-auto-deploy.sh  install-healthwatch.sh  install-systemd-autostart.sh  make_repo_index.py  reset_test_data.sql  verify_geo.py
seed/: consent.md  contacts.json  holidays.json  topics.json  transport_dispatchers.json  welcome.md
(+91 files in other folders)
