[project]
name = "aemr-bot"
version = "0.1.0"
description = "Чат-бот Администрации Елизовского муниципального района в MAX"
requires-python = ">=3.12"
dependencies = [
    # Совместимые версии (~=) разрешают патчи, но не пропускают внезапные
    # breaking changes. Пересматривать раз в квартал.
    "maxapi~=0.6",
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "sqlalchemy~=2.0",
    "asyncpg~=0.30",
    "alembic~=1.14",
    "apscheduler~=3.10",
    "pydantic~=2.9",
    "pydantic-settings~=2.6",
    "openpyxl~=3.1",
    "python-dotenv~=1.0",
    "python-dateutil~=2.9",
    "aiohttp~=3.10",
    # shapely — для services/geo.py: point-in-polygon по 10 поселениям
    # ЕМО + spatial-index по зданиям. Локально, без внешних API.
    "shapely~=2.0",
]

[project.optional-dependencies]
dev = [
    # pytest 8.4.2 уязвим к CVE-2025-71176; нижняя граница стоит на
    # первой исправленной версии по данным pip-audit.
    "pytest>=9.0.3,<10",
    # pytest-asyncio 0.24-0.26 требуют pytest<9. Версия 1.3.0 добавляет
    # поддержку pytest 9, поэтому обновляем плагин вместе с pytest, а не
    # глушим pip-audit и не форсируем несовместимый resolver.
    "pytest-asyncio>=1.3,<2",
    "pytest-cov~=6.0",
    "ruff~=0.7",
    "mypy~=1.13",
    "bandit~=1.7",
    "pip-audit~=2.7",
    "aiosqlite~=0.20",
    "types-python-dateutil~=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aemr_bot*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Pydantic Settings читает env-переменные, mypy не видит эту валидацию.
# У SQLAlchemy 2.0 Result есть .rowcount, но type stubs скрывают его на union.
disable_error_code = ["call-arg", "attr-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["aemr_bot"]
omit = [
    "aemr_bot/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
